<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_primary"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_profile"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_profile"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/sv_profile_page"
        app:layout_constraintTop_toBottomOf="@+id/cl_header"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="32dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="W,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/iv_profile_picture"/>

            <LinearLayout
                android:id="@+id/ll_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_image">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_username" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_color_primary_container"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Budiart18"/>

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_color_primary_container"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Budiart123"/>

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_color_primary_container"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="ragilbudiart@gmail.com"/>

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_phone_number" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_color_primary_container"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="62857......."/>

                <Button
                    android:id="@+id/button_submit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_submit"
                    android:textColor="@color/black"
                    android:paddingVertical="16dp"/>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>