<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cv_section_order">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_delivery_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_delivery_method"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_delivery_method" />

                    <RadioGroup
                        android:id="@+id/rg_delivery_method"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_primary_outline"
                        android:checkedButton="@+id/rb_delivery"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_pick_up"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toogle_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/text_pick_up"
                            android:textColor="@drawable/selector_toogle_text_color" />

                        <RadioButton
                            android:id="@+id/rb_delivery"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toogle_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/text_delivery"
                            android:textColor="@drawable/selector_toogle_text_color" />
                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/cv_delivery_method"
                tools:itemCount="3"
                tools:listitem="@layout/item_cart_product" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/rv_cart">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_payment_method"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_payment_method" />

                    <RadioGroup
                        android:id="@+id/rg_payment_method"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_primary_outline"
                        android:checkedButton="@+id/rb_e_wallet"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_cash"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toogle_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/text_cash"
                            android:textColor="@drawable/selector_toogle_text_color" />

                        <RadioButton
                            android:id="@+id/rb_e_wallet"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/selector_toogle_background"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/text_e_wallet"
                            android:textColor="@drawable/selector_toogle_text_color" />
                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_shopping_summary"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cv_payment_method"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_shopping_summary"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/shopping_summary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/tv_label_total_price"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAlignment="textStart"
                            android:text="@string/text_total_price"
                            android:layout_weight="1"
                            android:textColor="@color/grey" />

                        <TextView
                            android:id="@+id/tv_total_price"
                            style="@style/TextAppearance.Material3.TitleMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            tools:text="IDR. 80.000.000" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_section_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/app_color_primary"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_checkout"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>