<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.MainActivity">

    <!--    HEADER MENU-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_primary"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_profile_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/iv_profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

        <LinearLayout
            android:id="@+id/ll_location_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_notification_img"
            app:layout_constraintStart_toEndOf="@+id/siv_profile_img"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_current_location"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_current_location"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_user_location"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_user_current_location" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_notification_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/iv_notification_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ll_location_bar"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/sv_home_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--    BANNER MENU-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_banner"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <ImageView
                        android:id="@+id/iv_background_banner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/iv_pattern_img" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.8"
                        android:background="@color/app_color_secondary" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="16dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/ll_banner_desc"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="8dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toStartOf="@+id/iv_food_banner"
                            app:layout_constraintStart_toStartOf="parent">

                            <TextView
                                android:id="@+id/tv_banner_desc"
                                style="@style/TextAppearance.Material3.TitleMedium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_banner_description"
                                android:textColor="@color/app_color_on_primary" />

                            <Button
                                android:id="@+id/button_banner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/black"
                                android:text="@string/text_button_banner"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/iv_food_banner"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:scaleType="centerInside"
                            android:src="@drawable/iv_food_banner"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ll_banner_desc" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <!--    CATEGORIES MENU-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_categories_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cv_banner">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_top_categories_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_top_categories"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_top_categories_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/cl_top_categories_title"
                    tools:context=".presentation.homefragment.FoodListFragment">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_list_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--    DISCOUNT MENU-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_discount_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cl_categories_menu">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_top_discount_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_top_discount"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_top_discount_title"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ib_switch_mode"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/ib_switch_mode"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_linear_mode"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/cl_top_discount_title"
                    tools:context=".presentation.homefragment.FoodListFragment">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_list_foods"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>